# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: gendiff-ci-workflow.yml
gendiff/: __init__.py  file_reader.py  file_to_dict_converter.py  formatter.py  gendiff_cli.py  gendiff_func.py  parser.py  stylish_formatter.py
gendiff/formatters/: formatter.py  json_formatter.py  plain_formatter.py  stylish_formatter.py
gendiff/scripts/: gendiff.py  gendiff_start.py
gendiff_util/: __init__.py  formatter.py  gendiff.py  parser.py
gendiff_util/scripts/: __init__.py  gendiff.py
hexlet_code/: diff1.py  gendiff.py  open_file_test.py
tests/: test_gendiff.py
tests/fixtures/: dict_from_file.py  diff_nested_struct.py  file.json  file.yaml  file_3.json  file_4.json  plain_fixture_test.py  stylish_fixture_test.py
