[tool.poetry]
name = "gen-diff-utility"
version = "0.1.0"
description = ""
authors = ["Konstantin-P <k.pavlov.reg@yandex.ru>"]
readme = "README.md"
packages = [{include = "gendiff_util"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff_util.gendiff:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
